docs-eol/docs-eol.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-deploy
  labels:
    app: docs-deploy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-deploy
  template:
    metadata:
      labels:
        app: docs-deploy
    spec:
      containers:
        - name: docs
          image: docs
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 500Mi
              cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  name: docs-svc
spec:
  selector:
    app: docs-deploy
  ports:
    - name: "main"
      port: 3000
      targetPort: 3000
