docs-eol/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: docs-tls-secret
      hosts:
      - docs.oficinaeol.uchile.cl
  rules:
  - host: docs.oficinaeol.uchile.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: docs-svc
          servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docs-ingress-cached
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "cache-control: max-age=315360000";
      proxy_cache static-cache;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_valid 200 302 10m;
      proxy_ignore_headers "Set-Cookie";
      proxy_hide_header "Set-Cookie";
      add_header X-Cache-Status $upstream_cache_status;
spec:
  tls:
    - secretName: docs-tls-secret
      hosts:
      - docs.oficinaeol.uchile.cl
  rules:
  - host: docs.oficinaeol.uchile.cl
    http:
      paths:
      - path: /images/(.*\.[0-9a-f]{12}\..*)
        backend:
          serviceName: docs-svc
          servicePort: 3000
